# communication-topology-co-design-in-graph-recurrent-neural-n

./: CLAUDE.md  README.md  pyproject.toml
scripts/: train.py
src/: data.py  model.py  training.py
